[project]
name = "hello-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.7.5",
    "autogen-ext>=0.7.5",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
